--- a/src/main/webapp/lib/views/usuario/credenciais.html
+++ b/src/main/webapp/lib/views/usuario/credenciais.html
@@ -15,7 +15,7 @@
                     <span class="input-group-addon">
                         <i class="fa fa-user"></i>
                     </span>
-                    <input type="text" class="form-control" name="usuario" id="usuario" ng-model="pessoa.usuario.usuario">
+                    <input type="text" class="form-control" name="usuario" id="usuario" ng-model="usuario.login">
                 </div>
             </div>
             <div class="form-group">
@@ -24,7 +24,7 @@
                     <span class="input-group-addon">
                         <i class="fa fa-key"></i>
                     </span>
-                    <input type="text" class="form-control" name="senha" id="senha" ng-model="pessoa.usuario.senha">
+                    <input type="text" class="form-control" name="senha" id="senha" ng-model="usuario.senha">
                 </div>
             </div>
             <div class="form-group">
