--- a/src/main/webapp/lib/views/login.html
+++ b/src/main/webapp/lib/views/login.html
@@ -30,7 +30,7 @@
             </form>
             <div class="pull-right">
                 <p>Não é cadastrado?
-                    <a href="#/sportsgo/novo_usuario/dados">Clique aqui</a>
+                    <a href="#/sportsgo/usuario/novo">Clique aqui</a>
                     <br><br>
                 </p>
             </div>
