--- a/src/main/webapp/lib/views/usuario/pre-cadastro.html
+++ b/src/main/webapp/lib/views/usuario/pre-cadastro.html
@@ -26,7 +26,7 @@
                 </div>
                 <div class="form-group">
                     <label for="email">Email</label>
-                    <input class="form-control" type="text" name="email" id="email" ng-model="usuario.email" required>
+                    <input class="form-control" type="text" name="email" id="email" ng-model="usuario.emails.enderecoEmail" required>
                 </div>
                 <div class="form-group" ng-show="cpfBool">
                     <label for="cpf">CPF</label>
