--- a/src/main/webapp/lib/views/usuario/pre-cadastro.html
+++ b/src/main/webapp/lib/views/usuario/pre-cadastro.html
@@ -3,6 +3,9 @@
         <h2 class="text-red">Novo usuário</h2>
         <hr>
     </div>
+    <p class="text-center text-muted" if-loading>
+        <span class="fa fa-spinner fa-spin fa-3x"></span>
+    </p>
     <div class="well">
         <div growl></div>
         <form name="preCadastroForm" ng-submit="cadastrarUsuario()">
