--- a/src/main/webapp/lib/views/login.html
+++ b/src/main/webapp/lib/views/login.html
@@ -29,7 +29,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="Logar" class="btn btn-primary btn-block">
+                    <input type="submit" value="Logar" class="btn btn-primary btn-block btn-outline">
                 </div>
             </form>
             <div class="pull-right">
