Cadastro de anúncio, listagem de todos e por modalidade, logout, ajustes no index, slider anúncios index

--- a/src/main/webapp/lib/css/estilo.css
+++ b/src/main/webapp/lib/css/estilo.css
@@ -35,3 +35,13 @@
 .btn-danger.btn-outline:hover {
     color: #fff;
 }
+
+.img-height {
+    height: 150.66px;
+    width : 226px;
+}
+
+.img-categoria {
+    width:140px;
+    height:140px;
+}
