--- a/src/main/webapp/lib/views/usuario/pre-cadastro.html
+++ b/src/main/webapp/lib/views/usuario/pre-cadastro.html
@@ -1,13 +1,15 @@
 <div class="container">
-    <div>
+    <div class="row">
         <h2 class="text-red">Novo usuário</h2>
         <hr>
     </div>
-    <p class="text-center text-muted" if-loading>
+    <!--
+          <p class="text-center text-muted" if-loading>
         <span class="fa fa-spinner fa-spin fa-3x"></span>
     </p>
-    <div class="well">
-        <div growl></div>
+
+     -->
+    <div class="well row">
         <form name="preCadastroForm" ng-submit="cadastrarUsuario()">
             <div class="col-md-6">
                 <div>
