--- a/src/main/webapp/lib/views/usuario/pre-cadastro.html
+++ b/src/main/webapp/lib/views/usuario/pre-cadastro.html
@@ -18,7 +18,7 @@
                 </div>
                 <div class="form-group">
                     <label for="nome">Nome</label>
-                    <input class="form-control" type="text" name="nome" id="nome" ng-model="usuario.nome">
+                    <input class="form-control" type="text" name="nome" id="nome" ng-model="usuario.nome" required>
                 </div>
                 <div class="form-group">
                     <label for="sobrenome">Sobrenome</label>
