--- a/src/main/webapp/lib/views/principal.html
+++ b/src/main/webapp/lib/views/principal.html
@@ -117,7 +117,7 @@
                     </div>
                     <div class="caption">
                         <h3><a class="hover-effect" href="#">{{::anuncio.titulo}}</a></h3>
-                        <p>{{::anuncio.descricao}}</p>
+                        <p>{{anuncio.precoEvento | currency:'R$':2}}</p>
                     </div>
                 </div>
             </div>
