--- a/src/main/webapp/lib/css/estilo.css
+++ b/src/main/webapp/lib/css/estilo.css
@@ -45,3 +45,19 @@
     width:140px;
     height:140px;
 }
+
+ .sumir {
+    -moz-transition:transform 0.8s;
+    -webkit-transition:transform 0.8s;
+    -ms-transition:transform 0.8s;
+    -o-transition:transform 0.8s;
+    transition:transform 0.8s;
+}
+
+.sumir.ng-leave-active {
+  -moz-transform: scale(0.1);
+  -webkit-transform: scale(0.1);
+  -ms-transform: scale(0.1);
+  -o-transform: scale(0.1);
+  transform: scale(0.1);
+} 
