--- a/src/main/webapp/lib/views/anuncios/anuncios-todos.html
+++ b/src/main/webapp/lib/views/anuncios/anuncios-todos.html
@@ -11,7 +11,7 @@
                         <div class="overflow-hidden">
                             <img class="img-responsive img-height" src="{{anuncio.fotoCapa}}" alt="">
                         </div>
-                        <a class="btn-more hover-effect" href="">Saiba mais</a>
+                        <a class="btn-more hover-effect" href="" ng-click="carregarDetalhesAnuncio(anuncio)">Saiba mais</a>
                     </div>
                     <div class="caption">
                         <p>{{anuncio.descricao}}</p>
