--- a/src/main/webapp/lib/views/anuncios/detalhes-anuncio.html
+++ b/src/main/webapp/lib/views/anuncios/detalhes-anuncio.html
@@ -5,7 +5,7 @@
     </div>
     <div>
         <label>Descrição</label>
-        <label class="pull-right">Cadastro por {{autor}} em: {{anuncio.dataInclusao | date: 'dd/MM/yyyy'}}</label>
+        <label class="pull-right">Cadastrado por {{autor}} em: {{anuncio.dataInclusao | date: 'dd/MM/yyyy'}}</label>
         <div class="well" ng-bind="anuncio.descricao"></div>
     </div>
     <div>
