--- a/src/main/webapp/lib/views/principal.html
+++ b/src/main/webapp/lib/views/principal.html
@@ -113,7 +113,7 @@
                         <div class="overflow-hidden">
                             <img class="img-responsive img-height" src="{{::anuncio.fotoCapa}}" alt="">
                         </div>
-                        <a class="btn-more hover-effect" href="" ng-click="carregarDetalheAnuncio(anuncio)">Saiba mais</a>
+                        <a class="btn-more hover-effect" href="" ng-click="carregarDetalhesAnuncio(anuncio)">Saiba mais</a>
                     </div>
                     <div class="caption">
                         <h3><a class="hover-effect" href="#">{{::anuncio.titulo}}</a></h3>
