--- a/src/main/webapp/lib/views/usuario/pre-cadastro.html
+++ b/src/main/webapp/lib/views/usuario/pre-cadastro.html
@@ -49,7 +49,7 @@
                         <span class="input-group-addon">
                         <i class="fa fa-key"></i>
                     </span>
-                        <input type="text" class="form-control" name="senha" id="senha" ng-model="usuario.senha" required>
+                        <input type="password" class="form-control" name="senha" id="senha" ng-model="usuario.senha" required>
                     </div>
                 </div>
                 <div class="form-group">
@@ -58,7 +58,7 @@
                         <span class="input-group-addon">
                         <i class="fa fa-key"></i>
                     </span>
-                        <input type="text" class="form-control" name="confirmarSenha" id="confirmarSenha" ng-model="confirmarSenha" required>
+                        <input type="password" class="form-control" name="confirmarSenha" id="confirmarSenha" ng-model="confirmarSenha" required>
                     </div>
                 </div>
             </div>
