--- a/src/main/webapp/lib/views/anuncios/editar-anuncio.html
+++ b/src/main/webapp/lib/views/anuncios/editar-anuncio.html
@@ -8,44 +8,46 @@
             <div class="col-md-12">
                 <div class="form-group col-md-6">
                     <label for="titulo">Título</label>
-                    <input class="form-control" type="text" id="titulo" name="titulo" ng-model="anuncio.titulo" required>
+                    <input class="form-control" type="text" id="titulo" name="titulo" ng-model="anuncio.titulo">
                 </div>
-                <div class="form-group col-md-6">
+                <div class="form-group col-md-6" ng-repeat="local in anuncio.locais">
                     <label for="local">Local</label>
-                    <input class="form-control" type="text" id="local" name="local" ng-model="anuncio.locais.local" required>
+                    <input class="form-control" type="text" id="local" name="local" ng-model="local.local">
                 </div>
             </div>
             <div class="col-md-12">
                 <div class="form-group col-md-6">
                     <label for="descricao">Descrição</label>
-                    <textarea ng-model="anuncio.descricao" class="form-control" rows="5" id="descricao" required></textarea>
+                    <textarea ng-model="anuncio.descricao" class="form-control" rows="5" id="descricao"></textarea>
                 </div>
                 <div class="form-group col-md-6">
                     <label for="modalidade">Modalidades</label>
-                    <select multiple class="form-control" id="modalidade" ng-model="anuncio.modalidade" ng-options="modalidade for modalidade in modalidadesEsportivas" required>
+                    <select multiple class="form-control" id="modalidade" ng-model="anuncio.modalidade" ng-options="modalidade for modalidade in modalidadesEsportivas">
                 </select>
                 </div>
             </div>
             <div class="col-md-12">
-                <div class="form-group col-md-6">
+                <div class="form-group col-md-6" ng-repeat="data in anuncio.datas">
                     <label for="dataEvento">Data de início</label>
-                    <input class="form-control" type="text" name="dataEvento" ng-model="anuncio.datas.dataEvento" id="dataEvento" onkeypress="MascaraData(cadastroAnuncioForm.dataEvento)"
-                        limit-to="10" required> 
+                    <input class="form-control" type="text" name="dataEvento" ng-model="data.dataEvento" id="dataEvento" onkeypress="MascaraData(cadastroAnuncioForm.dataEvento)"
+                        limit-to="10">
                 </div>
                 <div class="form-group col-md-6">
                     <label for="dataTermino">Data de término</label>
                     <input class="form-control" type="text" name="dataTermino" id="dataTermino" ng-model="anuncio.dataTermino" onkeypress="MascaraData(cadastroAnuncioForm.dataTermino)"
-                        limit-to="10" required>
+                        limit-to="10">
                 </div>
             </div>
             <div class="col-md-12">
                 <div class="form-group col-md-6">
                     <label for="precoEvento">Preço</label>
-                    <input class="form-control" type="text" name="precoEvento" id="precoEvento" ng-model="anuncio.precoEvento" onkeypress="MascaraMoeda(cadastroAnuncioForm.precoEvento)" limit-to="9" required>
+                    <input class="form-control" type="text" name="precoEvento" id="precoEvento" ng-model="anuncio.precoEvento" onkeypress="MascaraMoeda(cadastroAnuncioForm.precoEvento)"
+                        limit-to="9">
                 </div>
                 <div class="form-group col-md-6">
                     <label for="imagens">Imagens</label>
-                    <input class="form-control" type="file" name="imagens" id="imagens" file-upload="myFile" placeholder="A primeira imagem será a da capa" multiple required>
+                    <input class="form-control" type="file" name="imagens" id="imagens" file-upload="myFile" placeholder="A primeira imagem será a da capa"
+                        multiple>
                 </div>
             </div>
             <div class="col-md-12">
