--- a/src/main/webapp/lib/views/login.html
+++ b/src/main/webapp/lib/views/login.html
@@ -21,7 +21,7 @@
                         <span class="input-group-addon">
                             <i class="fa fa-key"></i>
                         </span>
-                        <input class="form-control" type="text" name="senha" id="senha" ng-model="usuario.senha">
+                        <input class="form-control" type="password" name="senha" id="senha" ng-model="usuario.senha">
                     </div>
                 </div>
                 <div class="form-group">
