--- a/src/main/webapp/lib/views/anuncios/detalhes-anuncio.html
+++ b/src/main/webapp/lib/views/anuncios/detalhes-anuncio.html
@@ -47,4 +47,29 @@
             <p>{{anuncio.dataTermino | date: 'dd/MM/yyyy'}}</p>
         </div>
     </div>
-</div>
+    <hr>
+    <div class="row" ng-repeat="comentario in comentarios track by $index">
+        <div class="col-sm-5">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <strong>{{comentario.autor}}</strong>
+                </div>
+                <div class="panel-body">
+                    {{comentario.texto}}
+                </div>
+            </div>
+        </div>
+    </div>
+    <div>
+        <h3>Comentários</h3>
+    </div>
+    <hr>
+    <div>
+        <div class="form-group">
+            <textarea class="form-control" name="" id="" cols="20" rows="5" ng-model="textoComentario"></textarea>
+        </div>
+        <div>
+            <button class="btn btn-space btn-primary pull-right" ng-click="inserirComentario()">Comentar</button>
+        </div>
+    </div>
+    <br><br>
