--- a/src/main/webapp/lib/views/usuario/cadastro.html
+++ b/src/main/webapp/lib/views/usuario/cadastro.html
@@ -5,10 +5,15 @@
     </div>
     <div class="well row">
         <form name="cadastroForm" ng-submit="cadastrarUsuario()">
-            <label for="">Tipo pessoa</label>
-            <div class="form-group">
+            <div class="form-group col-md-6">
+                <label for="">Tipo pessoa</label>
+                <br>
                 <label class="radio-inline"><input type="radio" name="optradio" ng-focus="cpfActive()">Física</label>
                 <label class="radio-inline"><input type="radio" name="optradio" ng-focus="cnpjActive()">Jurídica</label>
+            </div>
+            <div class="form-group col-md-6">
+                <label for="imagem">Imagem de perfil</label>
+                <input class="form-control" type="file" name="imagem" id="imagem" file-upload="myFile" required>
             </div>
             <div class="form-group" ng-show="cpfBool">
                 <label for="cpf">CPF</label>
