--- a/src/main/webapp/lib/views/principal.html
+++ b/src/main/webapp/lib/views/principal.html
@@ -170,8 +170,8 @@
             </a>
         </div>
         <div class="item col-md-2">
-            <a href="http://pcsist.com.br/">
-                <img src="lib/img/parceiros/pcsistema.jpg" alt="">
+            <a href="">
+                <img src="lib/img/parceiros/prudence.png" alt="">
             </a>
         </div>
         <div class="item col-md-2">
