--- a/src/main/webapp/lib/views/anuncios/detalhes-anuncio.html
+++ b/src/main/webapp/lib/views/anuncios/detalhes-anuncio.html
@@ -56,7 +56,7 @@
     </div>
     <hr>
 
-    <div class="col-md-6" ng-repeat="comentario in comentarios track by $index">
+    <div class="col-md-6" ng-animate="{enter: 'animate-enter', leave: 'animate-leave'}" ng-repeat="comentario in anuncio.comentarios track by $index">
         <div class="col-md-2">
             <div class="thumbnail">
                 <img class="img-responsive user-photo" ng-src="data:image/png;base64,{{comentario.imagem}}">
